--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 glob = { version = "0.3.0" }
 itertools = { version = "0.10.3" }
 
-anyhow = { workspace = true }
-proc-macro2 = { workspace = true }
-quote = { workspace = true }
-syn = { workspace = true }
+anyhow = "1.0"
+quote = "1.0"
+proc-macro2 = { version = "1.0", features = ["span-locations"] }
+syn = { version = "1.0", features = ["full"] }
