--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ anyhow = "1.0"
 quote = "1.0"
 proc-macro2 = { version = "1.0", features = ["span-locations"] }
 syn = { version = "2.0", features = ["full"] }
+
+[dev-dependencies]
+pretty_assertions = "1.4"
