--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,5 @@ jobs:
         run: cargo clippy --all-targets --all-features
       - name: Run tests
         run: cargo test --all-features -- --nocapture
+      - name: Run codegen_tests
+        run: cargo run --example codegen_tests
