--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ glob = { version = "0.3.0" }
 anyhow = "1.0"
 quote = "1.0"
 proc-macro2 = { version = "1.0", features = ["span-locations"] }
-syn = { version = "2.0", features = ["full"] }
+syn = { version = "2.0", features = ["full", "extra-traits"] }
 prettyplease = "0.2.20"
 
 [dev-dependencies]
