feat(ci): ensure formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
 
       - run: rustup component add clippy
 
+      - name: Check formatting
+        run: cargo fmt --check
+
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features
 
