--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-pyxis = { path = "../" }
+pyxis = { path = "../", features = ["json"] }
 clap = { version = "4.5", features = ["derive"] }
 anyhow = { workspace = true }
-specta-typescript = "0.0.7"
+specta-typescript = { workspace = true }
 
 [[bin]]
 name = "pyxis"
