--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
 on: push
-name: Clippy check
+name: CI
 
 # Make sure CI fails on all warnings, including Clippy lints
 env:
   RUSTFLAGS: "-Dwarnings"
 
 jobs:
-  clippy_check:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,11 +19,10 @@ jobs:
 
       - run: rustup component add clippy
 
-      - name: Check formatting
-        run: cargo fmt --check
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
 
-      - name: Run Clippy
-        run: cargo clippy --all-targets --all-features
-
-      - name: Run tests
-        run: ./test.sh
+      - name: Run tests, clippy, and fmt
+        run: python test.py
