feat: fix up semantic errors + add proper locations + structured errors
This commit fixes up the output from Claude Code Web to better reflect what's actually required. Apologies for a long commit; I lacked the time to make it short.

Full list of changes:
- Consistently format errors with a `format_with_ariadne` method on all errors
- `ItemLocation`s on everything... ish. I've discovered that this is not really the case, and this will require a significant amount of mending. Oh well!
- Consistently pass `ItemLocation` around instead of faking it
- Use highly structured errors that do not couple presentation with construction
- A whole bunch of other shit

Turns out making thousands of lines of changes is still error-prone with the latest agents. Still, I think it saved time, especially because it solved the blank-canvas problem.

For reference, this is what the original prompt I used for the first round of fix-up work looked like:

```markdown
- `src/span.rs`:
  - create an `ItemLocation` consisting of `filename: Arc<str>, span: Span`, and use it religiously everywhere. every single grammar+semantic item should have an `ItemLocation` that indicates where it's from that can be used for error reporting or diagnostics. don't skimp out.
  - `ErrorLabelColor` should have semantic meaning, so that they can be used consistently. they should be renamed to match this, and `ErrorLabel::with_color` should be renamed accordingly
  - `ErrorContext` should have an `ItemLocation` instead of `filename, span`.
  - the existing `ErrorContext::new` should be renamed to `ErrorContext::completely_empty_do_not_use_outside_of_tests`.
  - a new `ErrorContext::new` should be added that takes an `ItemLocation`.
  - remove `ErrorContext::default`.
- in general, avoid using `ErrorContext::completely_empty_do_not_use_outside_of_tests` outside of tests and functions used by tests; we should _always_ carry spans across where possible, and we should very rarely default to `None` spans. this means

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,5 +31,9 @@ specta = { workspace = true, optional = true }
 [features]
 json = ["dep:serde_json", "dep:specta"]
 
+[[example]]
+name = "codegen_tests"
+required-features = ["json"]
+
 [dev-dependencies]
 pretty_assertions = "1.4"
