--- a/viewer/package.json
+++ b/viewer/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev-public": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "tsc --noEmit && eslint .",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
