--- a/viewer/package.json
+++ b/viewer/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "dev-public": "vite --host",
     "build": "tsc -b && vite build",
-    "lint": "tsc --noEmit && eslint .",
+    "lint": "tsc --noEmit && eslint . && prettier --check \"src/**/*.{ts,tsx,css}\"",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "preview": "vite preview"
   },
